# omnetpp

./: !BRANCH_CLOSED!  .cvsignore  .gdbinit  .gitignore  .lldbinit  INSTALL  INSTALL.md  MIGRATION  Makefile  Makefile.98  Makefile.in  Makefile.inc.in  Makefile.vc  README  TODO-UNTIL-2-dot-1  Version  WHATSNEW  WHATSNEW.md  _makedemo  _makedist  _setperm  _tag  _tounix  configure  configure.in  configure.user.dist  configuser.vc  configuser.vc.dist  flake.nix  install.sh  m100.bat  m60.bat  m70.bat  m71.bat  m80.bat  m90.bat  opp.mpj  packages-ubuntu-internal.sh  packages-ubuntu.sh  rpm-build  (+13 more)
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_release.yml  build_tests.yml  main_tests.yml
TMP/: modelchange.msg  resultsaver.h  signals-notes.txt  simsignals.tex  tinyvec.h
TMP/testmodel/: AbstractFifo.cc  AbstractFifo.h  FifoNet.ned  Sink.cc  Sink.ned  Tester.cc  m71.bat  omnetpp.ini  r.bat  rcmd.bat  rcmd2.bat
_icons/: _convert  _convert.bat  _convert.pl  convert.bat  gif2tcl  gif2tcl.bat  gned.lst  header.tcl  plove.lst  scalars.lst  tkenv.lst
_icons/svg/: gen.bat  generate.sh
bitmaps/: README  ball.xbm  ball_s.xbm  ball_vs.xbm  box1.xbm  box1_s.xbm  box2.xbm  box2_s.xbm  box3.xbm  box3_s.xbm  bwcomp.xbm  bwcomp_s.xbm  bwgen.xbm  bwgen_s.xbm  bwsink.xbm  bwsink_s.xbm  bwxcon_s.xbm  bwxconn.xbm  showpics  showpics.bat
contrib/: README
contrib/emacs/: README  ini-mode.el  ned-mode.el
contrib/gtk/: goodlookingeclipse-gtkrc
contrib/jresultwriter/: .project  Intro.txt
contrib/jsimplemodule/: JMessage.cc  JMessage.h  JSimpleModule.cc  JSimpleModule.h  JUtil.cc  README  SimkernelJNI_registerNatives.cc  makefrag.SAMPLE  makefrag.vc.SAMPLE  simkernel_wrap.cc
contrib/med/: ned.syn  opp_test.syn
contrib/octave/: README.1  README.2  README.3  README.4  create_seeds.m  estimate_mean.m  replicate.m  run_sim.m  test_estimate.m  test_seeds.m  test_sim.m
contrib/petrinets/: Arc.ned  InhibitorArc.ned  PetriNetBuilder.cc  PetriNetBuilder.ned  Place.cc  Place.h
contrib/topologyexport/: README  TopologyExporter.cc  TopologyExporter.ned  example-output.xml  topology.dtd
contrib/util/: NetAnimTrace.cc  NetAnimTrace.ned  cgatewrapper.h
contrib/vim/: README
contrib/xmlexport/: XMLExport.cc  XMLExport.ned
doc/: .gitignore  3rdparty.txt  API-changes-40.txt  API-changes.txt  API_CHANGES  Compatibility-Notes  Cygwin-Snapshots  GNED.txt  GPLElect  Install.BC5  Install.Cygwin  Install.MSVC  Install.Solaris  Install.Unix  LSM  License  MSVC-Macros.txt  Plove.txt  README  README.BETA1  README.IDE  Readme-IDE  Readme-MacOSX  Readme-MinGW  Readme-Unix  Readme.BC5  Readme.CVS  Readme.CVS-branches  Readme.Cygwin  Readme.MSVC  Readme.MacOSX  Readme.MacOsX  Readme.MinGW  Readme.Solaris  Readme.Tru64  Readme.Unix  Readme.bc3  StyleGuide  TODO  WhatsNew  (+10 more)
doc/etc/: ChangeLog  analysis.dtd  msg2.dtd  ned2.dtd
doc/html/: refman.htm  usman.htm  usman.html
doc/ide-changelog/: ide-changelog.html
doc/manual/: index.htm  usman.html
doc/misc/: NED-changes.txt  NED-package-structure.txt  NED-rules.txt  buildsystem.txt  oppfeatures.dtd
doc/ned2/: ChangeLog  example-tmp.ned  example.ned  msg2.dtd  ned.dtd  ned2.dtd  recovery.ned  tmp.ned
doc/src/: DoxygenLayout.xml  Makefile  Makefile.in  Makefile.vc  README  __NOTE  api.doxyfile  conf.py  (+8 more)
include/: ChangeLog  Makefile.in  Makefile.vc  carray.h  cbasicchannel.h  cboolpar.h  cboolparimpl.h  ccanvas.h  cchannel.h  cclassdescriptor.h  cclassfactory.h  ccommbuffer.h  ccomponent.h  ccomponenttype.h  ccompoundmodule.h  cconfig.h  cconfigentry.h  cconfigkey.h  cconfigoption.h  cconfigreader.h  cconfiguration.h  ccor.h  ccoroutine.h  cdataratechannel.h  cdefaultlist.h  cdelaychannel.h  cdensity.h  cdensityestbase.h  cdetect.h  cdisplaystring.h  cdispstr.h  cdoublepar.h  cdoubleparimpl.h  cdynamicexpression.h  cenum.h  cenvir.h  cevent.h  cexception.h  cexpression.h  cfingerprint.h  (+112 more)
lib/: .cvsignore
migrate/: README  allini.txt  collect-submodules.scm  converter.rb  defaultparams.txt  ini.cmd  makeparamlist.rb  mergenedconns.pl  migratecpp  migratecpp.cmd  migratecpp.pl  migratecpp.rb  migrateini  migrateini.cmd  migrateini.pl  migratemsg  migratemsg.cmd  migratemsg.pl  migratened  migratened.cmd  migratened.rb  namespaceize.pl  oldned2xml.cmd  test.rb  xml2newned.cmd
misc/: README
msvc/: Readme.txt
nix-support/: flake-support-on-6.0.1.patch  mkOmnetppDerivation.nix  mkOmnetppDocDerivation.nix  mkOmnetppDocGitDerivation.nix  mkOmnetppIDEDerivation.nix  mkOmnetppQtenvDerivation.nix  mkOmnetppSamplesDerivation.nix  set-qtenv
python/: ChangeLog  requirements-for-embedded-python.txt  requirements.txt
releng/: README  build-omnetpp-ide-linux  build-omnetpp-in-docker  docker-build.sh  makedist  makedist-core  makedist-linux  makedist-linux.aarch64  makedist-linux.x86_64  makedist-macos.aarch64  makedist-macos.x86_64  makedist-macosx  makedist-omnetpp.sh  makedist-win32.x86_64  makedist-win64  tag-changelogs  tweakconfigfile.pl
samples/: .opp_samples_wrapper  ChangeLog  Makefile  Makefile.in  Makefile.vc  README  _metadata.tgz  cc2cpp.bat  cpp2cc.bat  makefrag  makefrag.vc  opp_samples  package.ned  rundemo  rundemo.cmd  samples.html
test/: .cvsignore  ChangeLog  Makefile  Makefile.in  Makefile.vc  NED_channel_1.test  NED_channel_delay_1.test  NED_conn_1.test  NED_distrib_1.test  NED_distrib_2.test  NED_expr_1.test  NED_func_1.test  NED_func_2.test  NED_like_1.test  NED_like_2.test  NED_linelength_1.test  NED_parampassing_1.test  Readme  TESTS  assert_1.test  bugId_4.test  c++-doubletolongconversion.test  c++-dynamiccast.test  c++-exception_2.test  c++-exceptions.test  cArray_1.test  cArray_general_1.test  cChannel_delay_1.test  cDisplayStringParser_1.test  cDisplayStringParser_2.test  cDisplayString_2.test  cFileCommBuffer_basic_1.test  cGate_connectTo_2.test  cLlist_dup_1.test  cLongHistogram_file_1.test  cMessage_addLength_1.test  cMessage_copy_1.test  cMessage_encapsulate_1.test  cMessage_encapsulate_2.test  cMessage_pack_1.test  (+91 more)
tutorial/: ChangeLog  README
ui/: .gitignore  ChangeLog  pom.xml
(+12960 files in other folders)
